<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vn.pcx.bts.RegisterActivity" >
    
      <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="always"
           />
      <item android:id="@+id/action_add"
          android:title="@string/action_add"
          android:icon="@drawable/ic_action_add_to_queue"
          app:showAsAction="always"
           />
      <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="always"/>
      <item
        android:id="@+id/action_saveoffline"
        android:title="@string/action_saveoffline"
        android:icon="@drawable/ic_action_download"
        app:showAsAction="always"/>
       <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always"/>
      <item
        android:id="@+id/action_list"
        android:title="@string/action_list"
        android:icon="@drawable/ic_action_view_as_list"
        app:showAsAction="ifRoom"/>
     <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:icon="@drawable/ic_action_back"
        app:showAsAction="ifRoom"/>
      <item
        android:id="@+id/action_upload"
        android:title="@string/action_upload"
        android:icon="@drawable/ic_action_upload"
        app:showAsAction="ifRoom"/>
</menu>
