<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/d_color_table_title_background_applestyle"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            
            android:text="@string/order_stt"
            android:textColor="@color/d_color_white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/order_ten"
            android:textColor="@color/d_color_white"
            android:textAlignment="center"
            android:textStyle="bold" 
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            
            android:text="@string/order_soluong"
            android:textColor="@color/d_color_white" 
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/order_dongia"
            android:textColor="@color/d_color_white" 
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="Thành tiền"
            android:textColor="@color/d_color_white" 
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:text="KM"
            android:textColor="@color/d_color_white"
            android:textSize="18sp"
            android:textStyle="bold" 
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/d_color_white"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"  />
    </LinearLayout>

</LinearLayout>