<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/bottomPanel"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/progressContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/txtProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/edtOrderBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_barcode"
                    android:cursorVisible="false"
                    android:hint=""
                    android:textColor="#eeeeee"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="0dp"
                        android:src="@drawable/v21_icon_order" />

                    <TextView
                        android:id="@+id/txtDetail1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/datHang"
                        android:textColor="@color/d_color_table_title_background_applestyle"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/detailPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txtDateCreate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:text="Trạng thái"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txtDetail2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/ten"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edtname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:textSize="20sp" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/txtDetail3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/diaChi"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edtadress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/txtDetail4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/soDienThoai"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edtphone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:numeric="integer"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="120dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <Button
            android:id="@+id/btnSaveProduct"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="2"
            android:background="@color/d_color_vnpost_blue"
            android:text="Đặt hàng"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSearchProduct"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="Chọn sản phẩm" />
    </LinearLayout>

</RelativeLayout>